# scidavis-old

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.md  Dockerfile  Doxyfile  Doxyprogrammers  Doxyversion  INSTALL  INSTALL.bk  INSTALL.html  INSTALL.md  NEWS.md  README  README.md  config.pri  macPortsInstallPackages.sh  makeDist.sh  makeMsi.sh  makeRelease.sh  mkMacDist.sh  mxeInstallPackages.sh  pre-commit.py  python-includepath.py  run-coverage.sh  scidavis.pro  scidavisScriptInstall.nsi  translation_updater.py  travisRun.sh  update_translations.bat  update_translations.sh
fitPlugins/: CMakeLists.txt
fitPlugins/exp_saturation/: CMakeLists.txt  exp_saturation.c
fitPlugins/explin/: CMakeLists.txt  explin.pro
fitPlugins/fitRational0/: CMakeLists.txt  fitRational0.cpp
fitPlugins/fitRational1/: CMakeLists.txt  fitRational1.cpp
fitPlugins/planck_wavelength/: CMakeLists.txt
libscidavis/: CMakeLists.txt  libscidavis.pro  python-sipcmd.py  python.pri  sourcefiles.pri
libscidavis/src/: ApplicationWindow.cpp  ApplicationWindow.h  ArrowMarker.cpp  ArrowMarker.h  AssociationsDialog.cpp  AssociationsDialog.h  AxesDialog.cpp  AxesDialog.h  Bar.cpp  Bar.h  BoxCurve.cpp  BoxCurve.h  CanvasPicker.cpp  CanvasPicker.h  ColorBox.cpp  ColorBox.h  ColorButton.cpp  ColorButton.h  ColorMapEditor.cpp  ColorMapEditor.h  Cone3D.cpp  Cone3D.h  ConfigDialog.cpp  ConfigDialog.h  Convolution.cpp  Convolution.h  Correlation.cpp  Correlation.h  CurveRangeDialog.cpp  CurveRangeDialog.h  CurvesDialog.cpp  CurvesDialog.h  DataPickerTool.cpp  DataPickerTool.h  DataPointPicker.cpp  DataPointPicker.h  DataSetDialog.cpp  DataSetDialog.h  Differentiation.cpp  Differentiation.h  (+196 more)
libscidavis/src/future/core/: AbstractAspect.cpp  AbstractAspect.h  AbstractColumn.h  AbstractFilter.cpp  AbstractFilter.h  AbstractImportFilter.h  AbstractPart.cpp  AbstractPart.h  AbstractSimpleFilter.cpp  AbstractSimpleFilter.h  AspectPrivate.cpp  AspectPrivate.h  PartMdiView.cpp  PartMdiView.h  Project.cpp  Project.h  ProjectConfigPage.cpp  ProjectConfigPage.h  aspectcommands.h  future_Folder.cpp  future_Folder.h  interfaces.h
libscidavis/src/future/lib/: ActionManager.cpp  ActionManager.h  ConfigPageWidget.cpp  ConfigPageWidget.h  Interval.h  IntervalAttribute.h  XmlStreamReader.cpp  XmlStreamReader.h  macros.h
libscidavis/src/future/matrix/: MatrixModel.cpp  MatrixModel.h  MatrixView.cpp  MatrixView.h  future_Matrix.cpp  future_Matrix.h  matrixcommands.cpp  matrixcommands.h
libscidavis/src/future/table/: AsciiTableImportFilter.cpp  AsciiTableImportFilter.h  TableCommentsHeaderModel.cpp  TableCommentsHeaderModel.h  TableDoubleHeaderView.cpp  TableDoubleHeaderView.h  TableItemDelegate.cpp  TableItemDelegate.h  TableModel.cpp  TableModel.h  TableView.cpp  TableView.h  future_SortDialog.cpp  future_SortDialog.h  future_Table.cpp  future_Table.h  tablecommands.cpp  tablecommands.h
scidavis/: CMakeLists.txt  appicons.qrc  basic.pri  bundle.cmake  findBoostPythonLib.py  python.pri  scidavis.1  scidavis.appdata.xml  scidavis.desktop  scidavis.pro  scidavis.xml  scidavisUtil.py  scidavisrc.py  sourcefiles.pri
scidavis/icons/: scidavis-splash.xcf
scidavis/src/: ApplicationWindow.cpp  ApplicationWindow.h  AxesDialog.cpp  BoxCurve.cpp  ColorMapEditor.cpp  ColorMapEditor.h  CurvesDialog.cpp  DataPickerTool.cpp  DataPickerTool.h  ExportDialog.cpp  Filter.cpp  Fit.cpp  FitDialog.cpp  FunctionCurve.h  Graph.cpp  Graph.h  Graph3D.cpp  Grid.h  Integration.cpp  Matrix.cpp  Matrix.h  MuParserScript.cpp  MuParserScripting.cpp  MultiLayer.cpp  MultiPeakFit.cpp  NonLinearFit.cpp  Plot.h  Plot3DDialog.cpp  PlotCurve.cpp  PlotCurve.h  PlotDialog.cpp  PlotEnrichement.h  PolynomFitDialog.cpp  QwtBarCurve.h  QwtErrorPlotCurve.cpp  QwtErrorPlotCurve.h  QwtPieCurve.cpp  RangeSelectorTool.h  ScaleDraw.cpp  ScaleDraw.h  (+20 more)
scidavis/src/future/core/: AbstractImportFilter.h  ScriptingEngineManager.cpp  aspectcommands.h
scidavis/src/future/matrix/: MatrixModel.cpp  MatrixView.h  future_Matrix.cpp  future_Matrix.h
scidavis/translations/: scidavis_cs-alt.ts  scidavis_cs.ts  scidavis_de.ts  scidavis_es.ts  scidavis_fr.ts  scidavis_ja.ts  scidavis_nl.ts  scidavis_pl.ts  scidavis_pt-br.ts  scidavis_ru.ts  scidavis_sv.ts  scidavis_zh-cn.ts  scidavis_zh-tw.ts
test/: 3dplot.cpp  3dplot.sciprj  3dplotTable.sciprj  ApplicationWindowTest.h  CMakeLists.txt  USstates.opj  applicationWindow.cpp  arrowMarker.cpp  fft.cpp  main.cpp  menus.cpp  near.h  qstringStream.h  readWriteProject.cpp  readWriteProject.h  test.pro  testPaintDevice.cpp  testPaintDevice.h  unittests.cpp  unittests.h  utils.h
test/00/: pythonTests.sh  regression.sh
test/menuData/: appWithGraph_cs-alt.menudat  appWithGraph_cs.menudat  appWithGraph_de.menudat  appWithGraph_en.menudat  appWithGraph_es.menudat  appWithGraph_fr.menudat  appWithGraph_ja.menudat  appWithGraph_pt-br.menudat  appWithGraph_ru.menudat  appWithGraph_sv.menudat  appWithGraphcs-alt.menudat  appWithGraphcs.menudat  appWithGraphde.menudat  appWithGraphen.menudat  appWithGraphes.menudat  appWithGraphfr.menudat  appWithGraphja.menudat  appWithGraphpl.menudat  appWithGraphpt-br.menudat  appWithGraphru.menudat  appWithGraphsv.menudat  defaultMenus_cs-alt.menudat  defaultMenus_cs.menudat  defaultMenus_de.menudat  defaultMenus_en.menudat  defaultMenus_es.menudat  defaultMenus_fr.menudat  defaultMenus_ja.menudat  defaultMenus_pl.menudat  defaultMenus_pt-br.menudat  defaultMenus_ru.menudat  defaultMenus_sv.menudat
test/pythonTests/: Establishing_contact.py  Establishing_contact.sciprj  MDIWindow_class.py  SciDAVis_math_functions.py  arrowMarker.py  basicWindowsCommands.py  checkThrow.py  column_class.py  exponential_fit.py  folders.py  graph.py  grid.py  imageMarker.py  integration_with_python-crash.py  integration_with_python-crash.sciprj  interpolation.py  layer.py  legend.py  linear_and_polynomial_fits.py  matrix.py  nonlinear_and_gauss_fits.py  plotImage.py  qwtPlotCurve.py  simulate_a_Hydrogen_spectrum.py  smoothing.py  table_class.py  threeExponentialFit.py  twoExponential_fit.py  workingWithTables.py
(+1464 files in other folders)
